@@ -166,7 +166,7 @@ bool
 serd_env_qualify(const SerdEnv* const  env,
                  const SerdNode* const uri,
                  SerdNode* const       prefix,
-                 SerdChunk* const      suffix)
+                 SerdStringView* const suffix)
 {
   if (!env) {
     return false;
@@ -189,8 +189,8 @@ serd_env_qualify(const SerdEnv* const  env,
 SerdStatus
 serd_env_expand(const SerdEnv* const  env,
                 const SerdNode* const curie,
-                SerdChunk* const      uri_prefix,
-                SerdChunk* const      uri_suffix)
+                SerdStringView* const uri_prefix,
+                SerdStringView* const uri_suffix)
 {
   if (!env) {
     return SERD_ERR_BAD_CURIE;
@@ -230,8 +230,8 @@ serd_env_expand_node(const SerdEnv* const env, const SerdNode* const node)
     return serd_node_new_uri_from_node(node, &env->base_uri, &ignored);
   }
   case SERD_CURIE: {
-    SerdChunk prefix;
-    SerdChunk suffix;
+    SerdStringView prefix;
+    SerdStringView suffix;
     if (serd_env_expand(env, node, &prefix, &suffix)) {
       return SERD_NODE_NULL;
     }
