@@ -12,7 +12,7 @@
 #include <string.h>
 
 static inline bool
-chunk_equals(const SerdChunk* a, const SerdChunk* b)
+slice_equals(const SerdStringView* a, const SerdStringView* b)
 {
   return a->len == b->len && !strncmp(a->buf, b->buf, a->len);
 }
@@ -41,8 +41,8 @@ static inline SERD_PURE_FUNC size_t
 uri_rooted_index(const SerdURI* uri, const SerdURI* root)
 {
   if (!root || !root->scheme.len ||
-      !chunk_equals(&root->scheme, &uri->scheme) ||
-      !chunk_equals(&root->authority, &uri->authority)) {
+      !slice_equals(&root->scheme, &uri->scheme) ||
+      !slice_equals(&root->authority, &uri->authority)) {
     return 0;
   }
 
