@@ -554,17 +554,13 @@ write_uri_node(SerdWriter* const writer,
                const SerdNode*   node,
                const Field       field)
 {
-  SerdNode  prefix;
-  SerdChunk suffix;
+  SerdNode       prefix;
+  SerdStringView suffix;
 
   const bool has_scheme = serd_uri_string_has_scheme(node->buf);
   if (supports_abbrev(writer)) {
     if (field == FIELD_PREDICATE && !strcmp(node->buf, NS_RDF "type")) {
       return sink("a", 1, writer) == 1;
-    }
-
-    if (!strcmp(node->buf, NS_RDF "nil")) {
-      return sink("()", 2, writer) == 2;
     }
 
     if (has_scheme && (writer->style & SERD_STYLE_CURIED) &&
@@ -614,10 +610,9 @@ write_uri_node(SerdWriter* const writer,
 static bool
 write_curie(SerdWriter* const writer, const SerdNode* const node)
 {
-  SerdChunk  prefix = {NULL, 0};
-  SerdChunk  suffix = {NULL, 0};
-  SerdStatus st     = SERD_SUCCESS;
-
+  SerdStringView prefix = {NULL, 0};
+  SerdStringView suffix = {NULL, 0};
+  SerdStatus     st     = SERD_SUCCESS;
   switch (writer->syntax) {
   case SERD_NTRIPLES:
   case SERD_NQUADS:
